--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       <div class='title-two'> Guesser </div>
     </div>
     
+    <div class='intro'> 
+      <div> To play enter the range you would like to guess the number from. </div>
+      <div> Everytime you win a round, the range will be extended. </div> 
+      <div> You can reset the game anytime. </div>
+    </div>
+    
     <div class='range'>
       <input class='min' placeholder='Enter a range minimum' onkeyup='numbersOnly(this)'></input>
       <input class='max' placeholder='Enter a range maximum' onkeyup='numbersOnly(this)'></input>
