--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     
     <div class='intro'> 
-      <div> To play enter the range you would like to guess the number from. </div>
+      <div> Enter the range you would like to guess the number from. </div>
       <div> Everytime you win a round, the range will be extended. </div> 
       <div> You can reset the game anytime. </div>
     </div>
